<resources>

    <string-array name="status_array">
        <item>Староста</item>
        <item>Куратор</item>
        <item>Администратор</item>
    </string-array>

    <string name="app_name">Расписание</string>

    <string name="pickTitle">Выберите контакты, которые хотите добавить</string>
    <string name="addedData">Данные отправлены</string>
    <string name="today">Сегодня:</string>
    <string name="pickedDate">Выбранная дата:</string>
    <string name="Group">Группа №</string>
    <string name="Calendar">Календарь</string>
    <string name="settings_account">Настройки аккаунта</string>
    <string name="change_name_title">Изменение имени</string>
    <!--    missing activity-->
    <string name="order">Приказ</string>
    <string name="petition">Заявление</string>
    <string name="disease">Болезнь</string>
    <string name="disrespectful">Неуважительная причина</string>
    <string name="image">image</string>
    <!--    auth activity-->
    <string name="auth_title">Авторизация</string>

    <!--    Navigation Drawer-->
    <string name="messenger">Мессенджер</string>
    <string name="timetable">Расписание</string>
    <string name="missing">Отсутствующие</string>
    <string name="settings">Настройки</string>
    <string name="welcome">Вы вошли</string>

    <!--    hints-->
    <string name="hint_auth_login">Email, телефон</string>
    <string name="auth_eEmpty_text">Пустое поле</string>
    <string name="change_eEmpty_Name_text">Пустое поле для имени</string>
    <string name="changedData">Данные изменены</string>
    <string name="auth_Pass">Пароль</string>
    <string name="additionally">Дополнительно</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="change_name">Новое имя</string>
    <string name="change_surname">Новая фамилия</string>
    <string name="databaseError">Проблемы с базой данных</string>
    <string name="invalid_name">Изначально некорректное имя</string>
    <string name="noDay">Данный день отсутствует в базе данных</string>
    <string name="addNewUser">Добавление нового пользователя</string>
    <string name="hint_message">Сообщение</string>
    <string name="register_email">Почта</string>
    <string name="register_pas">Пароль</string>
    <string name="register_status">Статус</string>
    <string name="register_btn_create">Создать пользователя</string>
    <string name="groupCreated">Группа создана</string>
    <string name="pickDay">День</string>
    <string name="shareDay">Поделиться данными</string>

    <string name="users">Пользователи</string>
    <string name="createGroupTitle">Создать группу</string>
    <string name="newStudent">Добавить студентов</string>
    <string name="newStudentToGroup">Добавить студентов в группу</string>
    <string name="newPersonal">Добавить куратора, старосту</string>
    <string name="editPersonal">Редактировать куратора, старосту</string>

</resources>