<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.missingUI.CapitanMissingFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Sent_FB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Upd_FB"
        app:layout_constraintEnd_toEndOf="@+id/Upd_FB"
        app:srcCompat="@drawable/ic_send_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Upd_FB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Add_FB"
        app:layout_constraintEnd_toEndOf="@+id/Add_FB"
        app:srcCompat="@drawable/ic_mode_edit_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Add_FB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/Group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_group_24">

        <AutoCompleteTextView
            android:id="@+id/dropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:hint="@string/petition"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/chipTextStatement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:chipBackground="@color/colorBlue"
            app:chipHeight="30dp"
            app:chipTextSize="16dp"
            app:chipVerticalSpacing="3dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:hint="@string/disrespectful"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/chipTextValidReason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:chipBackground="@color/colorBlue"
            app:chipHeight="30dp"
            app:chipTextSize="16dp"
            app:chipVerticalSpacing="3dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:hint="@string/order"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/chipTextOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:chipBackground="@color/colorBlue"
            app:chipHeight="30dp"
            app:chipTextSize="16dp"
            app:chipVerticalSpacing="3dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:hint="@string/disease"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/chipTextDisease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:chipBackground="@color/colorBlue"
            app:chipHeight="30dp"
            app:chipTextSize="16dp"
            app:chipVerticalSpacing="3dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>